--- a/src/translation/pl.json
+++ b/src/translation/pl.json
@@ -79,6 +79,11 @@
     "saturday": "Sobota",
     "sunday": "Niedziela"
   },
+  "hour": {
+    "morning": "Rano",
+    "afternoon": "Popołudnie",
+    "evening": "Wieczór"
+  },
   "common": {
     "yes": "Tak",
     "no": "Nie"
