--- a/src/translation/pl.json
+++ b/src/translation/pl.json
@@ -41,7 +41,8 @@
     "save": "Zapisz",
     "back": "Wstecz",
     "next": "Dalej",
-    "skip": "Pomiń"
+    "skip": "Pomiń",
+    "done": "Zrobione"
   },
   "card": {
     "habitName": "Nazwa nawyku",
