--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -160,5 +160,28 @@
       "habitName": "Cold shower",
       "habitEnemy": "Long shower"
     }
+  },
+  "motivation": {
+    "good": [
+      "Great, your choice has reinforced your habit.",
+      "Keep it up — consistency builds mastery.",
+      "A small step, a big effect in the long run.",
+      "Smart choices are becoming your new normal.",
+      "One good habit leads to another."
+    ],
+    "bad": [
+      "It happens — choose better next time.",
+      "Don't punish yourself —  get back on track.",
+      "One weaker choice doesn't define your day.",
+      "Focus on the next step, not the mistake.",
+      "Everyone has rough moments."
+    ],
+    "skip": [
+      "Okay, a pause. Choose wisely next time.",
+      "A short break doesn't derail the journey.",
+      "Recharge and try again.",
+      "One skip doesn't break the streak.",
+      "Accept the break and choose wisely next time."
+    ]
   }
 }
