--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -109,7 +109,7 @@
       },
       "option3": {
         "title": "Monitor progress",
-        "subtitle": "Track your journey with levels and see how far you've come."
+        "subtitle": "Track your journey with the rep counter and see how far you've come."
       },
       "choose-habits": "Choose habits"
     },
