--- a/src/translation/pl.json
+++ b/src/translation/pl.json
@@ -110,7 +110,7 @@
       },
       "option3": {
         "title": "Monitoruj postępy",
-        "subtitle": "Śledź swoją podróż za pomocą poziomów i zobacz ile możesz osiągnąć."
+        "subtitle": "Śledź swoją podróż licznikiem powtórzeń i zobacz ile możesz osiągnąć."
       },
       "choose-habits": "Wybierz nawyki"
     },
