--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -19,6 +19,7 @@
     "pl": "Polish",
     "clock-format": "Clock format",
     "first-day": "First day of the week",
+    "card-duration": "Time to switch cards",
     "theme": "Theme",
     "dark": "Dark",
     "light": "Light",
