--- a/src/translation/pl.json
+++ b/src/translation/pl.json
@@ -19,6 +19,7 @@
     "pl": "Polski",
     "clock-format": "Format zegara",
     "first-day": "Pierwszy dzień tygodnia",
+    "card-duration": "Czas na zmianę karty",
     "theme": "Motyw",
     "dark": "Ciemny",
     "light": "Jasny",
