--- a/src/translation/pl.json
+++ b/src/translation/pl.json
@@ -10,7 +10,8 @@
     "skip": "Pomiń nawyk",
     "no-habits": "Brak nawyków",
     "contact": "Kontakt z autorem",
-    "support": "Wsparcie autora"
+    "support": "Wsparcie autora",
+    "equalize": "Wyrównaj liczniki"
   },
   "settings": {
     "version": "Wersja",
@@ -30,6 +31,7 @@
   "message": {
     "delete": "Czy na pewno chcesz usunąć nawyk",
     "skip": "Czy na pewno chcesz pominąć nawyk",
+    "equalize": "Czy na pewno chcesz wyrównać liczniki?",
     "contact": "Czy chcesz skontaktować się z autorem tej aplikacji (Mikołaj Bryksa) na Linkedin?",
     "support": "Czy chcesz wesprzeć autora tej aplikacji (Mikołaj Bryksa) kupując kawę?"
   },
@@ -43,7 +45,8 @@
     "back": "Wstecz",
     "next": "Dalej",
     "skip": "Pomiń",
-    "done": "Zrobione"
+    "done": "Zrobione",
+    "equalize": "Wyrównaj"
   },
   "card": {
     "habitName": "Nazwa nawyku",
