--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -33,7 +33,8 @@
     "skip": "Are you sure to skip the habit",
     "equalize": "Are you sure to equalize the counters?",
     "contact": "Do you want to contact the author of this app (Mikołaj Bryksa) on Linkedin?",
-    "support": "Do you want to support the author of this app (Mikołaj Bryksa) by buying coffee?"
+    "support": "Do you want to support the author of this app (Mikołaj Bryksa) by buying coffee?",
+    "see-you": "See you tomorrow"
   },
   "button": {
     "delete": "Delete",
@@ -59,7 +60,7 @@
     "goodCounter": "Right choices",
     "badCounter": "Easy choices",
     "skipCounter": "Skipped choices",
-    "done": "All done for today!",
+    "done": "All done!",
     "start": "Start",
     "finish": "Next",
     "remaining": "Remaining",
@@ -218,6 +219,12 @@
       "A missed habit doesn’t erase your effort.",
       "Even breaks can fuel progress.",
       "It’s just a pause — your journey continues."
+    ],
+    "end": [
+      "What made you feel grateful today?",
+      "What made you feel proud today?",
+      "What brought a smile to your face today?",
+      "What taught you something new today?"
     ]
   }
 }
