--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -19,9 +19,9 @@
     "en": "English",
     "pl": "Polish",
     "clock-format": "Clock format",
-    "first-day": "First day of the week",
-    "card-duration": "Time to switch cards",
-    "future-habits": "Future habits view",
+    "first-day": "First day",
+    "card-duration": "Switch cards",
+    "future-habits": "Future habits",
     "locked": "Locked",
     "unlocked": "Unlocked",
     "theme": "Theme",
