--- a/src/translation/pl.json
+++ b/src/translation/pl.json
@@ -19,9 +19,9 @@
     "en": "Angielski",
     "pl": "Polski",
     "clock-format": "Format zegara",
-    "first-day": "Pierwszy dzień tygodnia",
-    "card-duration": "Czas na zmianę karty",
-    "future-habits": "Widok przyszłych nawyków",
+    "first-day": "Pierwszy dzień",
+    "card-duration": "Zmiana karty",
+    "future-habits": "Przyszłe nawyki",
     "locked": "Zablokowany",
     "unlocked": "Odblokowany",
     "theme": "Motyw",
