--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -34,7 +34,7 @@
   "message": {
     "delete": "Are you sure to remove the habit",
     "skip": "Are you sure to skip the habit",
-    "equalize": "Are you sure to equalize the counters?",
+    "equalize": "Do you want to subtract easy choices from right choices and reset skipped choices?",
     "contact": "Do you want to contact the author of this app (Mikołaj Bryksa) on Linkedin?",
     "support": "Do you want to support the author of this app (Mikołaj Bryksa) by buying coffee?",
     "see-you": "See you tomorrow"
