replace global future habits lock with per-card unlock button

--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -50,7 +50,8 @@
     "next": "Next",
     "skip": "Skip",
     "done": "Done",
-    "equalize": "Equalize"
+    "equalize": "Equalize",
+    "unlock": "Unlock"
   },
   "card": {
     "habitName": "Habit name",
