--- a/src/translation/pl.json
+++ b/src/translation/pl.json
@@ -50,7 +50,8 @@
     "next": "Dalej",
     "skip": "Pomiń",
     "done": "Zrobione",
-    "equalize": "Wyrównaj"
+    "equalize": "Wyrównaj",
+    "unlock": "Odblokuj"
   },
   "card": {
     "habitName": "Nazwa nawyku",
