animate habit card height and opacity on toggle

--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -36,7 +36,7 @@
     "skip": "Are you sure to skip the habit",
     "equalize": "Do you want to subtract easy choices from right choices and reset skipped choices?",
     "contact": "Fill out the form to contact the app’s author (Mikołaj Bryksa).",
-    "support": "Do you want to support the author of this app (Mikołaj Bryksa) by buying coffee?",
+    "support": "Do you want to support the app’s author (Mikołaj Bryksa) by buying coffee?",
     "see-you": "See you tomorrow"
   },
   "button": {
