--- a/src/translation/pl.json
+++ b/src/translation/pl.json
@@ -36,7 +36,7 @@
     "skip": "Czy na pewno chcesz pominąć nawyk",
     "equalize": "Czy chcesz od dobrych wyborów odjąć łatwe wybory oraz wyzerować pominięte wybory?",
     "contact": "Wypełnij formularz, aby skontaktować się z autorem aplikacji (Mikołaj Bryksa).",
-    "support": "Czy chcesz wesprzeć autora tej aplikacji (Mikołaj Bryksa) kupując kawę?",
+    "support": "Czy chcesz wesprzeć autora aplikacji (Mikołaj Bryksa) stawiając mu kawę?",
     "see-you": "Do zobaczenia jutro"
   },
   "button": {
