--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -32,8 +32,7 @@
     "disabled": "Disabled"
   },
   "message": {
-    "delete": "Are you sure to remove the habit",
-    "skip": "Are you sure to skip the habit",
+    "delete": "Are you sure to remove the habit:\n\n",
     "equalize": "Do you want to subtract easy choices from right choices and reset skipped choices?",
     "contact": "Fill out the form to contact the app's author.",
     "support": "Hey there! 👋\n\nI'm an independent developer who built this app with love and many cups of coffee ☕.\n\nIf you enjoy using it and want to help me keep improving it, consider buying me a coffee. It really means a lot!\n\n~ Mikołaj Bryksa",
