--- a/src/translation/pl.json
+++ b/src/translation/pl.json
@@ -32,8 +32,7 @@
     "disabled": "Wyłączone"
   },
   "message": {
-    "delete": "Czy na pewno chcesz usunąć nawyk",
-    "skip": "Czy na pewno chcesz pominąć nawyk",
+    "delete": "Czy na pewno chcesz usunąć nawyk:\n\n",
     "equalize": "Czy chcesz od dobrych wyborów odjąć łatwe wybory oraz wyzerować pominięte wybory?",
     "contact": "Wypełnij formularz, aby skontaktować się z autorem aplikacji.",
     "support": "Cześć! 👋\n\nJestem niezależnym twórcą, który stworzył tę aplikację z pasją i przy wielu filiżankach kawy ☕.\n\nJeśli lubisz z niej korzystać i chcesz pomóc mi dalej ją rozwijać, postaw mi kawę — to naprawdę wiele dla mnie znaczy!\n\n~ Mikołaj Bryksa",
