fix motivation messages translation

--- a/src/translation/pl.json
+++ b/src/translation/pl.json
@@ -35,7 +35,7 @@
     "delete": "Czy na pewno chcesz usunąć nawyk:\n\n",
     "equalize": "Czy chcesz od dobrych wyborów odjąć łatwe wybory oraz wyzerować pominięte wybory?",
     "contact": "Wypełnij formularz, aby skontaktować się z autorem aplikacji.",
-    "support": "Cześć! 👋\n\nJestem niezależnym twórcą, który stworzył tę aplikację z pasją i przy wielu filiżankach kawy ☕.\n\nJeśli lubisz z niej korzystać i chcesz pomóc mi dalej ją rozwijać, postaw mi kawę — to naprawdę wiele dla mnie znaczy!\n\n~ Mikołaj Bryksa",
+    "support": "Cześć! 👋\n\nJestem niezależnym twórcą, który stworzył tę aplikację z pasją i przy wielu kawusiach ☕.\n\nJeśli lubisz z niej korzystać i chcesz pomóc dalej ją rozwijać - możesz postawić mi kawę. To naprawdę wiele dla mnie znaczy!\n\n~ Mikołaj Bryksa",
     "see-you": "Do zobaczenia jutro"
   },
   "button": {
