--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -38,6 +38,23 @@
     "support": "Hey there! 👋\n\nI'm an independent developer who built this app with love and many cups of coffee ☕.\n\nIf you enjoy using it and want to help me keep improving it, consider buying me a coffee. It really means a lot!\n\n~ Mikołaj Bryksa",
     "see-you": "See you tomorrow"
   },
+  "summary": {
+    "no-habits": "Add some habits to see your daily summary.",
+    "no-habits-today": "No habits scheduled for today.",
+    "no-actions-yet": "Start completing your habits to see a summary.",
+    "excellent-day": "Incredible, you completed {{count}} good actions today.",
+    "great-day": "Great job. {{count}} successful habits today.",
+    "good-day": "Well done. You completed {{count}} habits.",
+    "mixed-day": "You completed {{count}} habits, but there's room to grow.",
+    "tough-day": "Today was challenging, but tomorrow is a fresh start.",
+    "best-habit": "Your '{{habit}}' habit is going strong with {{rate}}% success.",
+    "strong-progress": "You're showing excellent consistency.",
+    "positive-progress": "You're making solid progress.",
+    "improve-habit": "Focus on improving '{{habit}}' tomorrow.",
+    "reduce-skips": "Try to reduce skipping habits tomorrow.",
+    "keep-momentum": "Keep this momentum going.",
+    "tomorrow-better": "Tomorrow is a new opportunity to do better."
+  },
   "button": {
     "delete": "Delete",
     "cancel": "Cancel",
