--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -35,8 +35,7 @@
     "delete": "Are you sure to remove the habit:\n\n",
     "equalize": "Do you want to subtract easy choices from right choices and reset skipped choices?",
     "contact": "Fill out the form to contact the app's author.",
-    "support": "Hey there! 👋\n\nI'm an independent developer who built this app with love and many cups of coffee ☕.\n\nIf you enjoy using it and want to help me keep improving it, consider buying me a coffee. It really means a lot!\n\n~ Mikołaj Bryksa",
-    "see-you": "See you tomorrow"
+    "support": "Hey there! 👋\n\nI'm an independent developer who built this app with love and many cups of coffee ☕.\n\nIf you enjoy using it and want to help me keep improving it, consider buying me a coffee. It really means a lot!\n\n~ Mikołaj Bryksa"
   },
   "summary": {
     "no-habits": "Add some habits to see your daily summary.",
@@ -49,7 +48,7 @@
     "best_habit_rate": "(as much as {{rate}}% effectiveness)",
     "worst_habit": "Focus on the habit of {{habit}}.",
     "worst_habit_rate": "(only {{rate}}% effectiveness)",
-    "keep_going": "Keep up the great work!"
+    "hints_button": "Hints"
   },
   "button": {
     "delete": "Delete",
