--- a/src/translation/pl.json
+++ b/src/translation/pl.json
@@ -35,8 +35,7 @@
     "delete": "Czy na pewno chcesz usunąć nawyk:\n\n",
     "equalize": "Czy chcesz od dobrych wyborów odjąć łatwe wybory oraz wyzerować pominięte wybory?",
     "contact": "Wypełnij formularz, aby skontaktować się z autorem aplikacji.",
-    "support": "Cześć! 👋\n\nJestem niezależnym twórcą, który stworzył tę aplikację z pasją i przy wielu kawusiach ☕.\n\nJeśli lubisz z niej korzystać i chcesz pomóc dalej ją rozwijać - możesz postawić mi kawę. To naprawdę wiele dla mnie znaczy!\n\n~ Mikołaj Bryksa",
-    "see-you": "Do zobaczenia jutro"
+    "support": "Cześć! 👋\n\nJestem niezależnym twórcą, który stworzył tę aplikację z pasją i przy wielu kawusiach ☕.\n\nJeśli lubisz z niej korzystać i chcesz pomóc dalej ją rozwijać - możesz postawić mi kawę. To naprawdę wiele dla mnie znaczy!\n\n~ Mikołaj Bryksa"
   },
   "summary": {
     "no-habits": "Dodaj nawyki, aby zobaczyć podsumowanie dnia.",
@@ -49,7 +48,7 @@
     "best_habit_rate": "(aż {{rate}}% skuteczności)",
     "worst_habit": "Nawyk {{habit}} wymaga większej uwagi.",
     "worst_habit_rate": "(jedynie {{rate}}% skuteczności)",
-    "keep_going": "Tak trzymaj!"
+    "hints_button": "Podpowiedzi"
   },
   "button": {
     "delete": "Usuń",
