--- a/src/translation/pl.json
+++ b/src/translation/pl.json
@@ -44,8 +44,7 @@
     "best_habit": "Najlepiej Ci idzie nawyk {{habit}}.",
     "best_habit_rate": "(aż {{rate}}% skuteczności)",
     "worst_habit": "Nawyk {{habit}} wymaga większej uwagi.",
-    "worst_habit_rate": "(jedynie {{rate}}% skuteczności)",
-    "hints_button": "Podpowiedzi"
+    "worst_habit_rate": "(jedynie {{rate}}% skuteczności)"
   },
   "button": {
     "delete": "Usuń",
@@ -61,7 +60,9 @@
     "equalize": "Wyrównaj",
     "unlock": "Odblokuj",
     "send": "Wyślij",
-    "sent": "Wysłano"
+    "sent": "Wysłano",
+    "offline": "Offline",
+    "hints": "Podpowiedzi"
   },
   "contact": {
     "email": "Twój e-mail",
