--- a/src/translation/pl.json
+++ b/src/translation/pl.json
@@ -11,7 +11,8 @@
     "no-habits": "Brak nawyków",
     "contact": "Kontakt",
     "support": "Kawusia",
-    "equalize": "Wyrównaj liczniki"
+    "equalize": "Wyrównaj liczniki",
+    "loading-habits": "Ładowanie nawyków"
   },
   "settings": {
     "version": "Wersja",
