--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -34,7 +34,7 @@
   },
   "message": {
     "delete": "Are you sure to remove the habit:\n\n",
-    "equalize": "Do you want to subtract easy choices from right choices and reset skipped choices?",
+    "equalize": "Do you want to subtract easy choices from right choices?",
     "contact": "Fill out the form to contact the app's author.",
     "support": "Hey there! 👋\n\nI'm an independent developer who built this app with love and many cups of coffee ☕.\n\nIf you enjoy using it and want to help me keep improving it, consider buying me a coffee. It really means a lot!\n\n~ Mikołaj Bryksa"
   },
