--- a/src/translation/pl.json
+++ b/src/translation/pl.json
@@ -34,7 +34,7 @@
   },
   "message": {
     "delete": "Czy na pewno chcesz usunąć nawyk:\n\n",
-    "equalize": "Czy chcesz od dobrych wyborów odjąć łatwe wybory oraz wyzerować pominięte wybory?",
+    "equalize": "Czy chcesz od dobrych wyborów odjąć łatwe wybory?",
     "contact": "Wypełnij formularz, aby skontaktować się z autorem aplikacji.",
     "support": "Cześć! 👋\n\nJestem niezależnym twórcą, który stworzył tę aplikację z pasją i przy wielu kawusiach ☕.\n\nJeśli lubisz z niej korzystać i chcesz pomóc dalej ją rozwijać - możesz postawić mi kawę. To naprawdę wiele dla mnie znaczy!\n\n~ Mikołaj Bryksa"
   },
