--- a/src/translation/pl.json
+++ b/src/translation/pl.json
@@ -64,7 +64,8 @@
     "send": "Wyślij",
     "sent": "Wysłano",
     "offline": "Offline",
-    "hints": "Podpowiedzi"
+    "hints": "Podpowiedzi",
+    "generating": "Generowanie"
   },
   "contact": {
     "email": "Twój e-mail",
