add a reset option to the time selection

--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -60,6 +60,7 @@
     "skip": "Skip",
     "done": "Done",
     "equalize": "Equalize",
+    "reset": "Reset",
     "unlock": "Unlock",
     "send": "Send",
     "sent": "Sent",
