--- a/src/translation/pl.json
+++ b/src/translation/pl.json
@@ -60,6 +60,7 @@
     "skip": "Pomiń",
     "done": "Zrobione",
     "equalize": "Wyrównaj",
+    "reset": "Reset",
     "unlock": "Odblokuj",
     "send": "Wyślij",
     "sent": "Wysłano",
