fix edge case of summary

--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -40,6 +40,7 @@
     "support": "Hey there! 👋\n\nI'm an independent developer who built this app with love and many cups of coffee ☕.\n\nIf you enjoy using it and want to help me keep improving it, consider buying me a coffee. It really means a lot!\n\n~ Mikołaj Bryksa"
   },
   "summary": {
+    "no_actions": "Your progress summary will appear here once you complete at least one repetition of your chosen habit.",
     "total_actions": "You have {{count}} habit repetitions behind you!",
     "good_rate_high": "As much as {{rate}}% of all your choices are good decisions.",
     "bad_rate_high": "However, in as much as {{rate}}% of situations you choose what is easier.",
@@ -84,7 +85,7 @@
     "goodCounter": "Right choices",
     "badCounter": "Easy choices",
     "skipCounter": "Skipped choices",
-    "done": "All done!",
+    "done": "All done today!",
     "start": "Start",
     "finish": "Next",
     "remaining": "Remaining",
