--- a/src/translation/pl.json
+++ b/src/translation/pl.json
@@ -40,6 +40,7 @@
     "support": "Cześć! 👋\n\nJestem niezależnym twórcą, który stworzył tę aplikację z pasją i przy wielu kawusiach ☕.\n\nJeśli lubisz z niej korzystać i chcesz pomóc dalej ją rozwijać - możesz postawić mi kawę. To naprawdę wiele dla mnie znaczy!\n\n~ Mikołaj Bryksa"
   },
   "summary": {
+    "no_actions": "Tutaj pojawi się podsumowanie Twoich postępów. Najpierw wykonaj przynajmniej jedno powtórzenie wybranego nawyku.",
     "total_actions": "Masz za sobą już {{count}} powtórzeń nawyków!",
     "good_rate_high": "Aż {{rate}}% wszystkich Twoich wyborów to dobre decyzje.",
     "bad_rate_high": "Jednak w aż {{rate}}% sytuacji wybierasz to co jest łatwiejsze.",
@@ -84,7 +85,7 @@
     "goodCounter": "Dobre wybory",
     "badCounter": "Łatwe wybory",
     "skipCounter": "Pominięte wybory",
-    "done": "Wszystko zrobione!",
+    "done": "Wszystko dziś zrobione!",
     "start": "Zacznij",
     "finish": "Dalej",
     "remaining": "Pozostało",
